force-app/main/default/objects/Guest_Reservation__c/Guest_Reservation__c.object-meta.xml
<CustomObject>
    <label>Guest Reservation</label>
    <nameField>
        <displayFormat>HM-{0000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Reservation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>