force-app/main/default/objects/Guest_Reservation__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <formula>Guests__r.Guest_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Email</label>
    <type>Text</type>
</CustomField>