force-app/main/default/objects/Guest_Reservation__c/fields/Guest_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Full_Name__c</fullName>
    <formula>Guests__r.First_Name__c  &amp;  &quot; &quot;  &amp;  Guests__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Full Name</label>
    <type>Text</type>
</CustomField>