force-app/main/default/objects/Guest_Reservation__c/fields/Guest_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone_Number__c</fullName>
    <formula>Guests__r.Guest_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Phone Number</label>
    <type>Text</type>
</CustomField>