force-app/main/default/objects/Guest_Reservation__c/fields/Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Hospitality__c</fullName>
    <label>Hospitality</label>
    <referenceTo>Hospitality__c</referenceTo>
    <relationshipLabel>Guest Reservation</relationshipLabel>
    <relationshipName>Guest_Reservation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>