force-app/main/default/objects/Guest_Reservation__c/fields/Is_Booking_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Booking_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booking Cancelled</label>
    <type>Checkbox</type>
</CustomField>