force-app/main/default/objects/Guest_Reservation__c/fields/Is_Booking_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Booking_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booking Confirmed</label>
    <type>Checkbox</type>
</CustomField>