force-app/main/default/objects/Guest_Reservation__c/fields/Is_Member_Discount_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Member_Discount_Applicable__c</fullName>
    <formula>IF(Guests__r.Has_Subcription__c = true,
&quot;True&quot; ,  IF(Guests__r.Has_Subcription__c = false, &quot; False&quot;, &quot;False&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Member Discount Applicable</label>
    <type>Text</type>
</CustomField>