force-app/main/default/objects/Guest_Reservation__c/fields/Resevation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resevation_Date_Time__c</fullName>
    <label>Resevation Date Time</label>
    <type>DateTime</type>
</CustomField>