force-app/main/default/objects/Guest_Reservation__c/fields/Restaurant_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Hotel__c</fullName>
    <label>Restaurant / Hotel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>