force-app/main/default/objects/Guest_Reservation__c/recordTypes/Reservation_for_Hotel.recordType-meta.xml
<RecordType>
    <fullName>Reservation_for_Hotel</fullName>
    <active>true</active>
    <label>Reservation for Hotel</label>
</RecordType>