force-app/main/default/objects/Guest_Reservation__c/recordTypes/Reservation_for_Restaurant.recordType-meta.xml
<RecordType>
    <fullName>Reservation_for_Restaurant</fullName>
    <active>true</active>
    <label>Reservation for Restaurant</label>
</RecordType>